# surrantic

./: .gitignore  .windsurfrules  example.ipynb  pyproject.toml
src/surrantic/: base.py
src/surreal_orm/: base.py
